<resources>
    <string name="app_name">World Spotlight</string>

    <!-- Abstract base Activity -->
    <string name="abstract_base_activity_user_must_logged_in">You must logged in for this action. Would you like to log in now?</string>

    <!-- Sign Up Login Activity -->
    <string name="sign_up_login_activity_sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up_login_activity_sign_in_with_google_plus">Sign in with Google</string>
    <string name="sign_up_login_activity_sign_up">Sign Up</string>
    <string name="sign_up_login_activity_log_in">Log In</string>
    <string name="sign_up_login_activity_skip">Skip</string>

    <!-- Sign up Activity -->
    <string name="sign_up_activity_title">Sign Up with your mail</string>
    <string name="sign_up_activity_email_hint">Enter your email</string>
    <string name="sign_up_activity_password_hint">Enter your password</string>
    <string name="sign_up_activity_verify_password_hint">Verify your password</string>
    <string name="sign_up_activity_sign_up">Sign Up</string>

    <string name="sign_up_activity_error_message_password_not_match">Your passwords do not match</string>

    <!-- Login Activity -->
    <string name="login_activity_title">Login with your mail</string>
    <string name="login_activity_login">Log In</string>

    <!-- Main Activity -->
    <string name="main_activity_you_are_here">You are here</string>
    <string name="action_bar_search">Search</string>
    <string name="main_activity_show_fav_videos_list_title">Favourites</string>
    <string name="main_activity_press_again_to_exit">Press again to exit</string>

    <!--    Drawer -->
    <string name="drawer_login">Login</string>
    <string name="drawer_likes">Favourites</string>
    <string name="drawer_recommended">Recommended</string>
    <string name="drawer_feedback">Feedback</string> <!-- TODO: Translate it -->
    <string name="drawer_feedback_title">Tell us about this app</string> <!-- TODO: Translate it -->
    <string name="drawer_feedback_cancel">Cancel</string> <!-- TODO: Translate it -->
    <string name="drawer_feedback_send">Send</string> <!-- TODO: Translate it -->
    <string name="drawer_feedback_thanks">Thanks for your feedback. Keep doing this!</string> <!-- TODO: Translate it -->
    <string name="drawer_logout">Logout</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- Add a video tutorial activity -->
    <string name="add_a_video_tutorial_activity_launch_youtube">Open YouTube!</string>
    <string name="add_a_video_tutorial_activity_1_click_on_button">1. Click on "Open YouTube" button at the bottom. \n\nWe will open YouTube app</string>
    <string name="add_a_video_tutorial_activity_2_select_a_video">2. Select a video</string>
    <string name="add_a_video_tutorial_activity_3_click_on_share">3. Click on share</string>
    <string name="add_a_video_tutorial_activity_4_select_our_app">4. Select our app</string>
    <string name="add_a_video_tutorial_activity_5_choose_place">5. Choose the place where the video was filmed</string>
    <string name="add_a_video_tutorial_activity_6_click_on_done">6. Click on done</string>
    <string name="add_a_video_tutorial_activity_not_show_message">You are soooo annoying. I already knew this!</string>

    <!-- Add a video activity -->
    <string name="action_bar_done">Done</string>
    <string name="add_a_video_activity_error_location_not_found">The location cannot be found. Could you try it later</string>
    <string name="add_a_video_activity_error_geocoder_not_present">It is not possible detect the city and the country automatically. Could you enter them manually</string>
    <string name="add_a_video_activity_video_added_correctly">The video was added correctly</string>
    <string name="add_a_video_activity_error_adding_video">There was an error Adding the video. Please try it again</string>
    <string name="add_a_video_activity_error_user_not_logged_in">You must logged in to add a video. Would you like to login now?</string>

    <!-- Video details activity -->
    <string name="video_details_description_title">Description</string>
    <string name="video_details_hashtags_title">HashTags</string>
    <string name="error_player">There was an error initializing the YouTube Player (%1$s)</string>
    <string name="action_bar_share">Share</string>
    <string name="share_title">Share it with &#8230;</string>
    <string name="share_subject">Check out this great video! %1$s</string>
    <string name="video_details_activity_user_must_logged_in_to_like">You must logged in to like this video. Would you like to log in now?</string>
    <string name="video_details_activity_user_must_logged_in_to_report">You must logged in to report this video. Would you like to log in now?</string>
    <string name="video_details_activity_report_sent_correctly">Thanks to report this video. We will check it as soon as possible</string>
    <string name="video_details_activity_empty_hash_tag">Add HashTags</string>
    <string name="video_details_activity_more_organizers">More</string>

    <!-- Hash tags list activity -->
    <string name="title_activity_hash_tags">HashTags</string>

    <!-- Organizers list activity -->
    <string name="title_activity_organizers_recycler">Organizers list</string>

    <!-- Notification module -->
    <string name="dialog_loading_generic_message">Loading &#8230;</string>
    <string name="notification_module_dialog_yes">Yes</string>
    <string name="notification_module_dialog_no">No for now</string>
    <string name="notification_module_dialog_user_not_logged_in_title">You must logged in</string>

    <!-- Correctly request messages -->
    <string name="correct_request_ok">The request went ok</string>

    <!-- Error messages -->
    <string name="error_message_internet_connection">It seems that you don\'t have internet connection. Could you check it?</string>
    <string name="error_message_server_generic">There was a problem with our server. Could you try it later?</string>
    <string name="error_message_script_error">Error processing script on the cloud code</string>
    <string name="error_message_validation_failed">Cloud Code validation failed</string>
    <string name="error_message_generic">It seems that there is a problem. Could you try it later?</string>
    <string name="error_message_video_not_found">The video you are looking for does not exists.</string>
    <string name="error_message_username_already_taken">There is already some user with that email address. Could you pick another one?</string>
    <string name="error_message_login_with_facebook">There was some error trying to login in with Facebook. Please try it again later</string>
    <string name="error_message_login_with_google">There was some error trying to login in with Google Plus. Please try it again later</string>
    <string name="error_message_login_with_parse">The username or the password does not match. Could you check them?</string>
    <string name="error_message_user_not_logged_in">The user must logged in for this. Could you try to log in?</string>
    <string name="error_message_adding_an_existing_video">The video you are trying to add already exists</string>

    <!-- Generic errors -->
    <string name="error_message_not_possible_launching_you_tube_app">It seems it is not possible launch YouTube app. Could you check if it is installed?</string>

    <!-- Generic error message for Edit Text -->
    <string name="error_message_field_empty">This field canont be empty</string>
    <string name="error_message_string_too_short">You must enter at least %1$s characters</string>
    <string name="error_message_email_address_required">You must enter a valid email address</string>

</resources>
