<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_login"
            android:icon="@drawable/ic_action_drawer_login"
            android:title="@string/drawer_login"/>
        <item
            android:id="@+id/drawer_item_favourites"
            android:icon="@drawable/ic_action_drawer_favourite"
            android:title="@string/drawer_likes"/>
        <item
            android:id="@+id/drawer_item_recommended"
            android:icon="@drawable/ic_action_drawer_recommended"
            android:title="@string/drawer_recommended"/>
        <item
            android:id="@+id/drawer_item_logout"
            android:icon="@drawable/ic_action_drawer_logout"
            android:title="@string/drawer_logout"/>
    </group>
</menu>